Install @antfu/eslint-config

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "subfont": "subfont -ir --no-fallbacks --silent --root dist"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.35.1",
     "@astrojs/image": "0.13.0",
     "@astrojs/mdx": "^0.15.0",
     "@astrojs/partytown": "^1.0.3",
