Set dbaeumer.vscode-eslint as defaultFormatter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,8 @@
   "files.associations": {
     "*.mdx": "markdown"
   },
-  "prettier.documentSelectors": ["**/*.astro"],
   "[astro]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
   "prettier.enable": false,
   "editor.formatOnSave": false,
