--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "subfont": "^6.12.4",
     "svgo": "2.8.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^0.28.4"
   },
   "engines": {
     "node": ">=16.12.0"
