--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
-    "astro": "2.0.2",
+    "astro": "2.0.6",
     "astro-compress": "1.1.28",
     "astro-icon": "^0.8.0",
     "eslint": "^8.33.0",
@@ -50,7 +50,9 @@
     "node": ">=16.12.0"
   },
   "dependencies": {
+    "@astrojs/vue": "^2.0.1",
     "chrono-node": "^2.5.0",
-    "vite-tsconfig-paths": "^4.0.5"
+    "vite-tsconfig-paths": "^4.0.5",
+    "vue": "^3.2.30"
   }
 }
