--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@astrojs/vue": "^2.0.1",
     "chrono-node": "^2.5.0",
+    "unstorage": "^1.0.1",
     "vite-tsconfig-paths": "^4.0.5",
     "vue": "^3.2.30"
   }
