--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "astro/tsconfigs/base",
   "compilerOptions": {
+    "moduleResolution": "nodenext",
     "strictNullChecks": true,
     "allowJs": true,
     "baseUrl": ".",
