--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "@astrojs/vue": "^2.0.1",
+    "@tailwindcss/forms": "^0.5.3",
     "chrono-node": "^2.5.0",
     "unstorage": "^1.0.1",
     "vite-tsconfig-paths": "^4.0.5",
